Fixes non-contrast header color on scroll [WEB-2835]

--- a/frontend/scss/globals/_g-header.scss
+++ b/frontend/scss/globals/_g-header.scss
@@ -19,7 +19,7 @@
 }
 
 .g-header:not(:has([aria-expanded="true"])) {
-  background-color: rgba($color__white, 0);
+  background-color: rgba($color__white, 1);
   transition: background-color .3s ease-out;
 }
 .g-header:has([aria-expanded="true"]) {
@@ -137,10 +137,9 @@
 }
 
 .s-scroll-direction-up.s-header-hide .g-header {
-    background-color: rgba($color__white, 1);
-    .g-header__nav-primary .level-1>.details {
-      left: 0;
-    }
+  .g-header__nav-primary .level-1>.details {
+    left: 0;
+  }
 }
 
 .g-header__nav-primary {
